@@ -1,3 +1,9 @@
+2002-10-04  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/os2/gnupmdrv.rc src/os2/dialogs.h src/os2/gclient.c: Update of
+	menu entries of gnupmdrv with respect to the current state of hotkeys
+	and mousing.
+
 2002-09-30  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/os2/gclient.c: Support for textcolors.
@@ -1197,7 +1203,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/09/30 00:52:21 $).
+	last modification date (from the tag $Date: 2002/09/30 15:15:19 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
